--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fab1en/rocket-chat-rest-client",
+    "name": "EsupPortail/rocket-chat-rest-client",
     "description": "Rocket Chat REST API client in PHP.",
     "autoload": {
         "classmap": ["src/"]
@@ -7,5 +7,8 @@
     "minimum-stability": "stable",
     "require": {
         "nategood/httpful": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8"
     }
 }
