--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "nategood/httpful": "*"
+        "nategood/httpful": "*",
+        "monolog/monolog": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8"
