remove logger no more usefull

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "nategood/httpful": "*",
-        "monolog/monolog": "*"
+        "nategood/httpful": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8"
